crates/jni/tests/ui/bind_java_type/fail/visibility_private_method.stderr
error[E0624]: method `private_method` is private
  --> tests/ui/bind_java_type/fail/visibility_private_method.rs:19:31
   |
 6 | /     bind_java_type! {
 7 | |         rust_type = TestClass,
 8 | |         rust_type_vis = pub,
 9 | |         java_type = "com.example.TestClass",
...  |
14 | |     }
   | |_____- private method defined here
...
19 |       let _ = inner::TestClass::private_method;
   |                                 ^^^^^^^^^^^^^^ private method
